[tool.poetry]
name = "MATLABfcnscrape"
version = "2.2.0"
description = "Scrape MATLAB's documentation for all function names and output to JSON files for external use"
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/StackOverflowMATLABchat"
repository = "https://github.com/StackOverflowMATLABchat/MATLABfcnscrape"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

[tool.poetry.scripts]
fcnscrape = "cli:scrape_cli"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10"
httpx = "^0.23"
lxml = "^4.6"
typer = "^0.4"

[tool.poetry.dev-dependencies]
black = "^22.3"
cogapp = "^3.3"
flake8 = "^4.0"
flake8-annotations = "^2.9"
flake8-bugbear = "^22.4"
flake8-docstrings = "^1.6"
flake8-fixme = "^1.1"
flake8-type-checking = {version="^1.5", python="<4.0"}
isort = "^5.10"
mypy = "^0.960"
pep8-naming = "^0.12"
pre-commit = "^2.18"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "src"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
