[tool.poetry]
name = "MATLABfcnscrape"
version = "2.2.0"
description = "Scrape MATLAB's documentation for all function names and output to JSON files for external use"
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/StackOverflowMATLABchat"
repository = "https://github.com/StackOverflowMATLABchat/MATLABfcnscrape"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

[tool.poetry.scripts]
fcnscrape = "cli:scrape_cli"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11"
httpx = "^0.23"
lxml = "^4.9"
typer = "^0.6"

[tool.poetry.dev-dependencies]
black = "^22.8"
cogapp = "^3.3"
flake8 = "^5.0"
flake8-annotations = "^2.9"
flake8-bugbear = "^22.9"
flake8-docstrings = "^1.6"
flake8-fixme = "^1.1"
isort = "^5.10"
mypy = "^0.981"
pep8-naming = "^0.13"
pre-commit = "^2.20"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "src"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"
