[tool.poetry]
name = "MATLABfcnscrape"
version = "2.2.0"
description = "Scrape MATLAB's documentation for all function names and output to JSON files for external use"
authors = ["sco1 <sco1.git@gmail.com>"]

readme = "README.md"
homepage = "https://github.com/StackOverflowMATLABchat"
repository = "https://github.com/StackOverflowMATLABchat/MATLABfcnscrape"
classifiers = [
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]

[tool.poetry.scripts]
fcnscrape = "cli:scrape_cli"

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11"
httpx = "^0.25"
lxml = "^4.9"
typer = "^0.9"

[tool.poetry.dev-dependencies]
black = "^23.1"
cogapp = "^3.3"
flake8 = "^6.0"
flake8-annotations = "^3.0"
flake8-bugbear = "^23.1"
flake8-docstrings = "^1.7"
flake8-fixme = "^1.1"
isort = "^5.12"
mypy = "^1.0"
pep8-naming = "^0.13"
pre-commit = "^3.0"

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "src"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.2"]
build-backend = "poetry.core.masonry.api"
